# tech-news-scraper

./: README.md
techscraper/: README.md  pyproject.toml
techscraper/src/techscraper/: crew.py  main.py
