[project]
name = "techscraper"
version = "0.1.0"
description = "techscraper using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
techscraper = "techscraper.main:run"
run_crew = "techscraper.main:run"
train = "techscraper.main:train"
replay = "techscraper.main:replay"
test = "techscraper.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
